# hf-agent-course-unit4

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  requrements.txt
agent_for_unit4/: __init__.py  agent.py  db.py  tools.py  wiki.py
